# UQCreator

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  debugExplicitEuler
CodeJulia/: eulerCheating  mainTwoSolutions.jl
CodeJulia/FVSolver1DEuler/: Advection.h  BurgersEquation.cpp  CMakeLists.txt  Cell.cpp  EulerEquationsIdGas.cpp  EulerEquationsIdGas.h  FVSolver1D.cpp  FVSolver1D.cpp~  FVSolver1D.mexa64  FVSolver1D_demo_burgers.m  FVSolver1D_demo_euler.m  HLLSolver1D.cpp  Heun.cpp  Heun.h  Limiter.h  Mesh.cpp  Mesh.h  Mesh1D.h  PhysicalProblem.cpp  PhysicalProblem.h  Rhs.cpp  Rhs.h  Rhs1D.cpp  RiemannSolver.cpp  RiemannSolver.h  TimeIntegrator.h  VanLeer1D.h  Vector.h  compile_mex.m
CodeJulia/Sod_Shock_Tube/: analytic_sod.m  sod_demo.m
CodeJulia/matlabFVSolver1D/: Advection.cpp  BurgersEquation.h  Cell.h  Cell1D.cpp  Cell1D.h  FVSolver1D.cpp  FVSolver1D.mexa64  FVSolver1D_demo.m  HLLSolver1D.h  Limiter.cpp  Mesh1D.cpp  MinMod1D.cpp  MinMod1D.h  Rhs1D.h  Settings.cpp  Settings.h  TimeIntegrator.cpp  VanLeer1D.cpp  Vector.cpp  compile_mex.m
CodeJuliaIPM/: euler.jl  mainPlot.jl
CodeJuliaIPM/results/: solutionDuctFilterL2FilterNx50N5tEnd0.8Sigma0.1.jld
Paper1/: ProofOneShotIPM.aux  ProofOneShotIPM.dvi  ProofOneShotIPM.tex  adaptivity.tex  appendix.tex  colloc_ipm.tex  framework.tex  implementation.tex  introduction.tex  main.aux  main.bbl  main.blg  main.tex  one_shot_ipm.tex  references.bib  results.tex  siamplain.bst  summary_outlook.tex
Paper1/CoverLetter/: main.tex
Paper1/ResponseToReviewers/: CRediT.tex  Response_to_Reviewer.tex
Paper1/SignificanceAndNovelty/: SignificanceAndNovelty.tex  highlights.tex  highlights.txt
Paper1/figs/: TestC.jl  state.pvsm  windowArrangementPlots.pwin
code/: README  callgrind.out
code/build-src-Desktop-Default/: CMakeCache.txt  Makefile  UQCreator.cbp  cmake_install.cmake
code/include/: burgers.h  kineticequation.h  mesh.h  mesh2d.h  momentsolver.h  problem.h  settings.h  splinefilter.h  thermalpn.h  thermalradiationclosure.h  typedefs.h
code/input/: Mesh_Sup.geo  dam2D.geo  dam2D.su2  eulerLine.toml  example.toml  example_advection.toml  example_burgers.toml  example_burgers1D.toml  example_burgers2D.toml  example_euler1D.toml  example_euler1DMultiDXi.toml  example_euler2D.toml  example_euler2DRectangle.toml  example_euler2D_pipe.toml  example_euler2D_pipe_adaptive.toml  example_navier_stokes1D.toml  example_pn.toml  example_pn_1D.toml  example_shallow_water.toml  line.geo  line.su2  lineThick.geo  lineThick.su2  m1_1D.toml  n10_nq15_s05.toml  n10_nq15_s075.toml  n10_nq15_s1.toml  n10_nq15_s125.toml  n10_nq20_s05.toml  n10_nq20_s075.toml  n10_nq20_s1.toml  n10_nq20_s125.toml  n5_nq10_s05.toml  n5_nq10_s075.toml  n5_nq10_s1.toml  n5_nq10_s125.toml  naca0012.geo  naca0012Fine.su2  naca0012Rectangle.su2  nacaCoarse.su2  (+25 more)
code/python/: uqcreator.py
code/results/: euler_naca0012IPM0-5.vtu  euler_naca0012IPM0-5_10M.vtu  mesh.vtu  plotXi2d.gnu  plotXi2dwithGrid.gnu  plotXiNew.gnu
code/src/: CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  CMakeLists.txt.user.4.8-pre1  advection2d.cpp  boundedbarrier.cpp  boundedbarrier.h  burgers.cpp  burgers.h  burgerssolver.cpp  burgerssolver.h  cell.cpp  cell.h  closure.cpp  closure.h  erfcfilter.cpp  erfclogfilter.cpp  erfclogfilter.h  euler.cpp  euler.h  euler1dfpfilter.cpp  euler1dfpfilter.h  euler2d.cpp  euler2d.h  euler2dfpfilter.cpp  euler2dfpfilter.h  eulerclosure.cpp  eulerclosure.h  eulerclosure2d.cpp  eulerclosure2d.h  expliciteuler.cpp  expliciteuler.h  exponentialfilter.cpp  exponentialfilter.h  filter.cpp  filter.h  fokkerplanckfilter.cpp  fokkerplanckfilter.h  gks.cpp  gnuplot-iostream.h  gnuplotlib.cpp  (+143 more)
code/src/closures/: boundedbarrier.cpp  eulerclosure2d.cpp  externalclosure.cpp  hyperbolicitylimiter2d.cpp  logsin.cpp  m1ipmclosure.cpp  regularizedeuler1d.cpp  shallowwaterclosure.cpp  shallowwaterclosure2d.cpp  stochasticgalerkin.cpp  thermalradiationclosure.cpp
code/src/filters/: erfclogfilter.cpp  exponentialfilter.cpp  l2filter.cpp  lassofilter.cpp
code/src/problems/: externalproblem.cpp  navierstokes.cpp  pnequations1d.cpp  radiationhydrodynamics.cpp  radiationhydrodynamics1d.cpp  shallowwater.cpp  shallowwater2d.cpp  thermalpn.cpp  thermalpn2d.cpp  thermalradiative.cpp
examples/euler_naca/: run.ipynb
include/: cell.h  expliciteuler.h  filter.h  legendre.h  line.h  mesh1d.h  quadraturegrid.h  settings.h  timesolver.h
include/closures/: externalclosure.h  hyperbolicitylimiter.h  hyperbolicitylimiter2d.h
include/filters/: erfcfilter.h  exponentialfilter.h  l2filter.h
include/problems/: advection2d.h  euler2d.h  externalproblem.h  navierstokes.h
julia/CodeScalarIPMMultiD/: Basis.jl  Solver.jl  SolverOnMoments.jl  closure.jl  closureLogBarrier.jl  main.jl  mainConvergenceFilters.jl  mainPlotting.jl  plotting.jl  pyplot_surfaceplot.jl  quadrature.jl  quadratureSummed.jl  settings.jl
julia/IPM/: Solver.jl  closure.jl  mesh.jl  newPlotTest.jl  settings.jl  sod_func.jl
julia/SG/: Basis.jl  Solver.jl  analytic_sod.jl  main.jl  plotting.jl  quadrature.jl  settings.jl
julia/Tensorization/: Basis.jl  IPMSolver.jl  IPMSolverAdaptive.jl  NVals.txt  NValsIPM.txt  closure.jl  errorsIPMExpNx2000.txt  errorsIPML1Nx2000.txt  errorsIPMNx2000.txt  errorsIPMVarNx2000.txt  main.jl  mainAdaptive.jl  mainCPP.jl  mainConvergenceFilters.jl  mainTensor.jl  mainTestClosure.jl  plotting.jl  quadrature.jl  runtimesIPMNx2000.txt  settings.jl
julia/Validate/: main.jl
python/: setup.py
python/uqcreator/: __init__.py  settings.py
results/logs/: 2019-09-05_09:06:13  2019-09-05_09:06:13_duals  2019-09-05_09:06:13_moments  2019-10-04_16:41:24  2019-10-04_16:41:24_duals  (+5 more)
scripts/: EulerClosure.nb  EulerClosureSimplified.nb  ShallowWater.nb  ShallowWater1D.nb  generateSettings.sh  run.sh  template.toml
src/: cell.cpp  hermite.cpp  main.cpp  matrix.cpp  mesh2d.cpp  momentsolver.cpp  problem.cpp  quadraturegrid.cpp  settings.cpp  triangle.cpp  vector.cpp  vectorspace.cpp
su2/: SU2RefSol.vtk  UQCRefSol.vtu  euler2D.cfg  euler_naca0012T0-1CFL0-04.vtu
(+125 files in other folders)
